[gd_scene load_steps=12 format=3 uid="uid://c3uqwk1yr867k"]

[ext_resource type="Script" path="res://Resources/WaterSpring/WaterBody.gd" id="1_3mboi"]
[ext_resource type="PackedScene" uid="uid://b145sofr6gp1x" path="res://Resources/WaterSpring/WaterSpring.tscn" id="1_ltspd"]
[ext_resource type="Shader" path="res://Resources/Shaders/Water.gdshader" id="3_srvlq"]
[ext_resource type="Script" path="res://Resources/WaterSpring/SmoothCurveTool.gd" id="4_1g3j4"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_sdalv"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hpy3c"]
seamless = true
seamless_blend_skirt = 0.2
noise = SubResource("FastNoiseLite_sdalv")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_h31rp"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ra6xf"]
seamless = true
noise = SubResource("FastNoiseLite_h31rp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qm7u1"]
shader = ExtResource("3_srvlq")
shader_parameter/tint = Color(0.14902, 0.560784, 0.764706, 1)
shader_parameter/scroll1 = Vector2(0.05, 0.05)
shader_parameter/scroll2 = Vector2(-0.05, -0.05)
shader_parameter/distortion_strength = 0.00600005
shader_parameter/noise1 = SubResource("NoiseTexture2D_hpy3c")
shader_parameter/noise2 = SubResource("NoiseTexture2D_ra6xf")

[sub_resource type="Curve2D" id="Curve2D_rpl52"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wokaa"]

[node name="WaterBody" type="Node2D"]
script = ExtResource("1_3mboi")
spring_number = 20
spring_scene = ExtResource("1_ltspd")

[node name="WaterPolygon" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_qm7u1")

[node name="SmoothPath" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_rpl52")
script = ExtResource("4_1g3j4")
spline_length = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wokaa")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
